fix(dropdown main menu): fixed broken interface ; feat(datepicker): finished customizing datepicking in homepage

--- a/src/app/components/dropdown-menu/dropdown-menu.component.scss
+++ b/src/app/components/dropdown-menu/dropdown-menu.component.scss
@@ -64,17 +64,20 @@ a {
   padding-bottom: 0;
   margin: 0;
 }
-
-.date-container {
-  padding: 0;
-  margin: 0;
-  background: var(--ion-color-lightcream);
-  color: var(--ion-color-dark);
+.ion-item-content {
+  --background: var(--ion-color-lightcream);
+  --font-family: "Urbanist";
+}
+.ion-item {
+  --padding: 0;
+  --margin: 0;
+  --background: var(--ion-color-lightcream);
+  --color: var(--ion-color-dark);
   font-family: "Urbanist";
-  border-color: white;
-  border-width: 1px;
-  padding-bottom: 0px;
-  border-bottom: 0px;
+  --border-color: white;
+  --border-width: 1px;
+  --padding-bottom: 0px;
+  --border-bottom: 0px;
 }
 .ion-item.active {
   font-weight: bold;
